# hf-agents

./: .gitignore  README.md  main.py  pyproject.toml
notebooks/: 00-smol-example-hf.ipynb  01-agent-with-smollm.ipynb  01-bonus.ipynb  02-multiagents.ipynb  02-smol-agents.ipynb
notebooks/llm-course/: 11.2-sft-with-trl.ipynb
