[project]
name = "hf-agents"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipdb",
    "ipykernel",
    "jupyter",
    "ipython",
    "ruff",
    "transformers>=4.51.3",
    "torch>=2.7.0",
    "ipywidgets>=8.1.7",
    "accelerate>=1.6.0",
]
