[project]
name = "hf-agents"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipdb",
    "ipykernel",
    "jupyter",
    "ipython",
    "ruff",
    "transformers==4.52.2",
    "torch>=2.7.0",
    "ipywidgets>=8.1.7",
    "accelerate>=1.6.0",
    "datasets>=3.6.0",
    "trl>=0.18.1",
    "peft>=0.15.2",
    "smolagents[litellm,mcp]>=1.17.0",
    "duckduckgo-search>=8.0.2",
    "huggingface-hub>=0.32.4",
]
